# time_keeper

./: .pre-commit-config.yaml  CPPLINT.cfg  cross.ini  meson.build
app/: activities_list_model_base.cc  activities_list_model_base.h  activity.cc  activity.h  app_state.cc  app_state.h  csv_exporter.cc  csv_exporter.h  database.cc  database.h  db_entities_test.cc  db_wrapper.cc  db_wrapper.h  edit_activity_dialog.cc  edit_activity_dialog.h  edit_date_dialog.cc  edit_date_dialog.h  edit_task_dialog.cc  edit_task_dialog.h  error_codes.cc  error_codes.h  everything.ui  export_view.cc  export_view.h  filtered_activities_dialog.cc  filtered_activities_dialog.h  io.github.vchigrin.time_keeper.appdata.xml.in  list_model_base.h  m-time-tracker.gresources.xml  main.cc  main_window.cc  main_window.h  main_window.ui  meson.build  mobile_time_tracker.desktop.in  recent_activities_model.cc  recent_activities_model.h  running_task.cc  running_task.h  select_rows.cc  (+18 more)
data/: io.github.vchigrin.time_keeper.appdata.xml.in  meson.build  time_keeper.desktop.in
debian/: changelog  control  mobile-time-tracker.install
po/: LINGUAS  POTFILES  meson.build  mobile_time_tracker.pot  ru.po  time_keeper.pot  uk.po
tools/prepare_sys_root/: Dockerfile  mobian.list  run.sh
